# Talent_Finder_Backend_Sourcing_

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
docs/: API.md  DEPLOYMENT.md
src/: main.py
src/api/middleware/: error_handler.py  logging.py
src/api/rest/: app.py
src/api/rest/routes/: health.py  sourcing.py
src/config/: settings.py
src/constants/: __init__.py
src/core/exception/: exceptions.py
src/core/services/: candidate_transformer.py  deduplication.py  embedding.py  llm.py  parser.py  pipeline.py  scheduler.py  scraper.py
src/core/services/postfreejob/: __init__.py  llm_formatter.py  parser.py  pipeline.py  scraper.py
src/core/services/sourcing/: sourcing_service.py
src/data/clients/: chroma_client.py  mongo_client.py  postgres_client.py
src/data/models/mongo/: candidate.py
src/data/models/postgres/: sourcing_config.py
src/data/repositories/: candidate_repo.py  sourcing_config_repo.py
src/handlers/http_clients/: core_service_client.py
src/observability/logging/: logger.py
src/observability/metrics/: prometheus.py
src/observability/tracing/: tracer.py
src/schema/: sourcing_schema.py
src/utils/: hashing.py  query_builder.py
