[project]
name = "TalentFinder"
version = "1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.5",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-groq>=1.1.2",
    "lxml>=6.0.2",
    "motor>=3.7.1",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-instrumentation>=0.61b0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-requests>=0.61b0",
    "opentelemetry-sdk>=1.40.0",
    "playwright>=1.58.0",
    "prometheus-client>=0.24.1",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "sentence-transformers>=5.3.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "undetected-chromedriver>=3.5.5",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4"]
ignore = ["B008", "E501", "B904", "N818", "E712", "N812"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
ignore_errors = true
strict = false
disallow_untyped_defs = false
explicit_package_bases = true
